crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__function_definition.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"(a, b) => c;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 12,
                    },
                },
                span: 0..12,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 11,
                            },
                        },
                        span: 0..11,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 2,
                                                },
                                            },
                                            span: 1..2,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "a",
                                                    mutable: false,
                                                    span: 1..2,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 1,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 2,
                                                        },
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 4,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                            },
                                            span: 4..5,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "b",
                                                    mutable: false,
                                                    span: 4..5,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 4,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                body: Expr(
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 11,
                                            },
                                        },
                                        span: 10..11,
                                        kind: Ident(
                                            Ident {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 10,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 11,
                                                    },
                                                },
                                                span: 10..11,
                                                name: "c",
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
